--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME =postgres
-DB_PASSWORD =sonali
-DB_DATABASE= ecomapii
+DB_USERNAME =
+DB_PASSWORD =
+DB_DATABASE= 
